# Seiyuu

./: .gitignore  CLAUDE.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
design/: improvement-audit-2026-07-11.md
design/m6c/: mockup-talkback-v3.html
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx
prompts/adjudication/: v1.md
prompts/attribution/: v1.md  v2.md  v3.md  v4.md  v5.md  v6.md
prompts/caster/: v1.md
prompts/respell/: v1.md
scripts/: Smoke.py  audition_indextts2_emotions.py  demo_section2.py
src/seiyuu/: __init__.py  __main__.py  cli.py  duration.py  settings.py
tests/: conftest.py  factories.py  fake_alias_resolver.py  fake_engine.py  fake_provider.py  test_align.py  test_api_m6b1.py  test_api_m6b2.py  test_api_m6b3.py  test_api_m6b4.py  test_api_m6b5.py  test_api_m6b6.py  test_api_segment_words.py  test_api_series.py  test_api_trusted_host.py  test_assemble.py  test_attribute_aliases.py  test_attribute_cache.py  test_attribute_chunking.py  test_attribute_models.py  test_attribute_pipeline.py  test_attribute_providers.py  test_attribute_registry.py  test_attribute_singlequote.py  test_attribute_spans.py  test_attribute_validate.py  test_book_deletion.py  test_borrow_broker.py  test_cancel_checkpoints.py  test_casting.py  test_chatterbox_engine.py  test_chatterbox_gpu.py  test_cli.py  test_cli_attribute.py  test_cli_cloud.py  test_cli_convert.py  test_cli_edits.py  test_cli_render.py  test_cli_validate.py  test_cli_voices.py  (+43 more)
tests/fixtures/: pnp_summary.json
voices/charlotte_lucas_auto/: meta.json
voices/elizabeth_auto/: meta.json
voices/jane_auto/: meta.json
voices/jane_lucas_auto/: meta.json
voices/kitty_auto/: meta.json
voices/lady_lucas_auto/: meta.json
voices/lydia_auto/: meta.json
(+196 files in other folders)
