[project]
name = "seiyuu"
version = "0.1.0"
description = "Multi-voice audiobook creator: EPUB -> LLM speaker attribution -> multi-engine TTS -> chaptered .m4b"
requires-python = ">=3.11,<3.12"
dependencies = [
    # Torch: MUST stay the CUDA build, resolved only from the cu126 index below.
    # chatterbox-tts pins torch==2.6.0; never bump torch independently.
    "torch==2.6.0+cu126",
    "torchaudio==2.6.0+cu126",
    "chatterbox-tts==0.1.7",
    "kokoro==0.9.4",
    "ebooklib>=0.20",
    # LLM SDKs (attribution providers, M2) and whisper validation (M4) — already
    # part of the working environment; declared so `uv sync` doesn't strip them.
    "openai>=2.41",
    "anthropic>=0.109",
    "faster-whisper>=1.2",
    "beautifulsoup4>=4.15.0",
    "pydantic>=2.13",
    "pydantic-settings>=2.0",
    "click>=8.4",
    "soundfile>=0.14",
    "num2words>=0.5.14",
    "elevenlabs>=2.55.0",
    "fastapi>=0.136.3",
    "uvicorn>=0.49.0",
    "python-multipart>=0.0.32",
]

[project.scripts]
seiyuu = "seiyuu.cli:main"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0",
    "ruff>=0.15",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchaudio = { index = "pytorch-cu126" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/seiyuu"]

[tool.pytest.ini_options]
addopts = "-m 'not gpu'"
markers = [
    "gpu: GPU/TTS smoke tests; excluded by default, run with `uv run pytest -m gpu`",
]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
